Fixed title spacing.

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -206,13 +206,14 @@
  * Posts
  */
 .post-header {
+  margin-top: $spacing-unit;
   margin-bottom: $spacing-unit;
 }
 
 .post-title {
   @include relative-font-size(2.625);
   letter-spacing: -1px;
-  line-height: 1;
+  line-height: 1.5;
 
   @include media-query($on-laptop) {
     @include relative-font-size(2.25);
